--- a/README.org
+++ b/README.org
@@ -6,6 +6,8 @@ This a simple PoC to encrypt and create secrets to a file and also decrypt and r
 
 Create secrets for an app
 
+Returns *201 - Created*
+
 #+BEGIN_EXAMPLE
 curl -v \
   -XPOST \
@@ -22,8 +24,20 @@ http://localhost:20800/v1/secrets
 
 Retrieve secrets from an app
 
+Returns *200 - Ok*
+
 #+BEGIN_EXAMPLE
 curl -v \
   -XGET \
+http://localhost:20800/v1/secrets?app=sample_app
+#+END_EXAMPLE
+
+Remove secrets from an app
+
+Returns *204 - No Content*
+
+#+BEGIN_EXAMPLE
+curl -v \
+  -XDELETE \
 http://localhost:20800/v1/secrets?app=sample_app
 #+END_EXAMPLE
